--- a/index.html
+++ b/index.html
@@ -9,9 +9,34 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Villa Radic</title>
     <body>
-        <header>Header content</header>
+        <header>
+            <div id="page-container">
+                <div id="content-wrap">
+            <!-- Navbar / Taken from Bootsrap documentation and modified-->
+            <div class="container-fluid">
+                <nav class="navbar navbar-expand-md bg-light-blue navbar-light fixed-top">
+                    <a class="navbar-brand" href="index.html">Villa Radic</a>
+                    <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="navbar-collapse collapse" id="collapsibleNavbar">
+                        <ul class="navbar-nav ml-auto">
+                            <li class="nav-item">
+                                <a class="nav-link active" href="index.html">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="gallery.html">Gallery</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="contact.html">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+        </header>
         <section>
-           <h1>Main images</h1>
+           Main images
         </section>
         <section>
             Description
