--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="author" content="Marko Jelavic"/>
     <meta name="keywords" content="Kotezi, Vrgorac, Radic, "/>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" type="text/css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
     <title>Villa Radic</title>
     <body>
         <header>
@@ -45,5 +47,7 @@
     <footer>
          social links here
     </footer>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+
 </body>
 </html>
