Add images folder and hero images section

--- a/index.html
+++ b/index.html
@@ -37,9 +37,20 @@
                 </nav>
             </div>
         </header>
-        <section>
-           Main images
-        </section>
+       <!--hero image section-->    
+    <section id="about">
+        <div class="container-fluid">
+            <div class="row your-new-class">
+                <div class="col-md-6 about-image left-image">
+                    <img  src="assets/images/radic3.jpg" class="img-fluid" alt="Iva Jelavic">
+                </div>
+                <div class="col-md-6 about-image right-image">
+                    <img  src="assets/images/radic8.jpg" class="img-fluid" alt="Iva Jelavic">
+                </div>
+            </div>
+        </div>
+    </section>
+        
         <section>
             Description
         </section>
