Add text block on hero images

--- a/index.html
+++ b/index.html
@@ -42,10 +42,14 @@
         <div class="container-fluid">
             <div class="row your-new-class">
                 <div class="col-md-6 about-image left-image">
-                    <img  src="assets/images/radic3.jpg" class="img-fluid" alt="Iva Jelavic">
+                    <img  src="assets/images/radic4.jpg" class="img-fluid" alt="Iva Jelavic">
+                    <div class="text-block">
+                        <h4>Nature</h4>
+                        <p>What a beautiful sunrise</p>
+                      </div>
                 </div>
                 <div class="col-md-6 about-image right-image">
-                    <img  src="assets/images/radic8.jpg" class="img-fluid" alt="Iva Jelavic">
+                    <img  src="assets/images/radic2.jpg" class="img-fluid" alt="Iva Jelavic">
                 </div>
             </div>
         </div>
