--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
     <section id="about">
         <div class="container-fluid">
             <div class="row your-new-class">
-                <div class="col-md-6 about-image left-image">
+                <div class="col-md-6 about-image left-image container">
                     <img  src="assets/images/radic4.jpg" class="img-fluid" alt="Iva Jelavic">
-                    <div class="text-block">
-                        <h4>Nature</h4>
-                        <p>What a beautiful sunrise</p>
+                    <div class="content">
+                        <h4>Villa Radic</h4>
+                        <p>What a beautiful place</p>
                       </div>
                 </div>
                 <div class="col-md-6 about-image right-image">
