--- a/index.html
+++ b/index.html
@@ -60,7 +60,34 @@
         </section>
  
     <footer>
-         social links here
+        <footer class="container-fluid">
+            <div id="footer-details" class="row justify-content-center no-gutters">
+                <div class="col">
+                    <p class=" general-sub">Check out my social pages</p>
+                    <ul class="inline-block social-links">
+                        <li class="list-inline-item ml-3">
+                            <a target="_blank" href="https://www.facebook.com/">
+                                <i class="fa fa-facebook" aria-hidden="true"></i>
+                                <span class="sr-only">Facebook</span>
+                            </a>
+                        </li>
+                        <li class="list-inline-item ml-3">
+                            <a target="_blank" href="https://www.twitter.com/">
+                                <i class="fa fa-twitter" aria-hidden="true"></i>
+                                <span class="sr-only">Twitter</span>
+                            </a>
+                        </li>
+                        <li class="list-inline-item ml-3">
+                            <a target="_blank" href="https://www.instagram.com/">
+                                <i class="fa fa-instagram" aria-hidden="true"></i>
+                                <span class="sr-only">Instagram</span>
+                            </a>
+                        </li>
+                    </ul>
+                     <p class="copyright general-sub">Copyright 2022 © Marko Jelavic</p>
+                </div>
+            </div>
+        </footer>
     </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 
