--- a/contact.html
+++ b/contact.html
@@ -37,9 +37,31 @@
                 </nav>
             </div>
         </header>
-        <section>
-            Contact
-        </section>
+          <!-- Contact / Taken from Bootsrap documentation and modified -->
+    <section class="container-fluid container-contact">
+        <div class="row">
+            <div class="col">
+                <h2 class="contact-heading text-center">Contact me</h2>
+                <div class="center-form">
+                    <form>
+                        <label class="form-label" for="fullname">Name</label>
+                        <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
+                        <label class="form-label" for="emailaddress">Email</label>
+                        <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required />
+                        <label class="form-label" for="contact-reason">Description</label>
+                        <input id="contact-reason"  style="display:none">
+                        <textarea rows="6" name="message" id="projectsummary" class="form-control" placeholder="Message" required></textarea>
+                        <div class="form-row text-center">
+                            <div class="col">
+                                <button type="submit" class="btn btn-secondary">Send Request</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+
+            </div>
+        </div>
+    </section>
         
     <footer>
         <footer class="container-fluid">
