Add images to gallery

--- a/gallery.html
+++ b/gallery.html
@@ -37,8 +37,93 @@
                 </nav>
             </div>
         </header>
-    <section>
-        Gallery
+     <!-- Gallery / Taken from Bootsrap documentation and modified-->
+    
+     <section id="gifs">
+        <div class="container-fluid">
+        <div class="row title">
+            <div class="col">
+                <h1>Gallery<br></h1>
+            </div>
+        </div>
+        </div>
+        <div class="responsive">
+            <div class="gallery">
+            <img src="assets/images/radic.jpg" alt="Radic" width="600" height="400">
+            </div>
+        </div>
+        <div class="responsive">
+            <div class="gallery">
+                <img src="assets/images/radic1.jpg" alt="Radic1" width="600" height="400">
+            </div>
+        </div>
+        <div class="responsive">
+            <div class="gallery">
+                    <img src="assets/images/radic2.jpg" alt="Radic2" width="600" height="400">
+            </div>
+        </div>
+        <div class="responsive">
+            <div class="gallery">
+            <img src="assets/images/radic3.jpg" alt="Radic3" width="600" height="400">
+            </div>
+        </div>
+        <div class="responsive">
+            <div class="gallery">
+                <img src="assets/images/radic4.jpg" alt="Radic4" width="600" height="400">
+            </div>
+        </div>
+        <div class="responsive">
+            <div class="gallery">
+                    <img src="assets/images/radic5.jpg" alt="Radic5" width="600" height="400">
+            </div>
+        </div>
+        <div class="responsive">
+            <div class="gallery">
+            <img src="assets/images/radic6.jpg" alt="Radic6" width="600" height="400">
+            </div>
+        </div>
+        <div class="responsive">
+            <div class="gallery">
+                <img src="assets/images/radic7.jpg" alt="Radic7" width="600" height="400">
+            </div>
+        </div>
+        <div class="responsive">
+            <div class="gallery">
+                    <img src="assets/images/radic8.jpg" alt="Radic8" width="600" height="400">
+            </div>
+        </div>
+        <div class="responsive">
+            <div class="gallery">
+            <img src="assets/images/radic9.jpg" alt="Radic9" width="600" height="400">
+            </div>
+        </div>
+        <div class="responsive">
+            <div class="gallery">
+                <img src="assets/images/radic10.jpg" alt="Radic10" width="600" height="400">
+            </div>
+        </div>
+        <div class="responsive">
+            <div class="gallery">
+                    <img src="assets/images/radic11.jpg" alt="Radic11" width="600" height="400">
+            </div>
+        </div>
+        <div class="responsive">
+            <div class="gallery">
+            <img src="assets/images/radic12.jpg" alt="Radic12" width="600" height="400">
+            </div>
+        </div>
+        <div class="responsive">
+            <div class="gallery">
+                <img src="assets/images/radic13.jpg" alt="Radic13" width="600" height="400">
+            </div>
+        </div>
+        <div class="responsive">
+            <div class="gallery">
+                    <img src="assets/images/radic14.jpg" alt="Radic14" width="600" height="400">
+            </div>
+        </div>
+        <div class="clearfix"></div>    
+        <br>
     </section>
 
     <footer>
