Add transparent text to both hero images

--- a/index.html
+++ b/index.html
@@ -42,14 +42,18 @@
         <div class="container-fluid">
             <div class="row your-new-class">
                 <div class="col-md-6 about-image left-image container">
-                    <img  src="assets/images/radic4.jpg" class="img-fluid" alt="Iva Jelavic">
+                    <img  src="assets/images/radic4.jpg" class="img-fluid" alt="Radic4">
                     <div class="content">
                         <h4>Villa Radic</h4>
                         <p>What a beautiful place</p>
                       </div>
                 </div>
-                <div class="col-md-6 about-image right-image">
-                    <img  src="assets/images/radic2.jpg" class="img-fluid" alt="Iva Jelavic">
+                <div class="col-md-6 about-image right-image container">
+                    <img  src="assets/images/radic2.jpg" class="img-fluid" alt="Radic2">
+                    <div class="content">
+                        <h4>Villa Radic</h4>
+                        <p>An oasis of peace, quiet and untouched nature</p>
+                      </div>
                 </div>
             </div>
         </div>
