--- a/contact.html
+++ b/contact.html
@@ -1,43 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Villa Kotezi rental page"/>
-    <meta name="author" content="Marko Jelavic"/>
-    <meta name="keywords" content="Kotezi, Vrgorac, Radic, "/>
+    <meta name="description" content="Villa Kotezi rental page" />
+    <meta name="author" content="Marko Jelavic" />
+    <meta name="keywords" content="Kotezi, Vrgorac, Radic, " />
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" type="text/css" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        type="text/css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+        type="text/css" />
     <title>Villa Radic</title>
-    <body>
-        <header>
-            <div id="page-container">
-                <div id="content-wrap">
-            <!-- Navbar / Taken from Bootsrap documentation and modified-->
-            <div class="container-fluid">
-                <nav class="navbar navbar-expand-md bg-light-blue navbar-light fixed-top">
-                    <a class="navbar-brand" href="index.html">Villa Radic</a>
-                    <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="navbar-collapse collapse" id="collapsibleNavbar">
-                        <ul class="navbar-nav ml-auto">
-                            <li class="nav-item">
-                                <a class="nav-link" href="index.html">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="gallery.html">Gallery</a>
-                            </li>
-                            <li class="nav-item active">
-                                <a class="nav-link" href="contact.html">Contact</a>
-                            </li>
-                        </ul>
-                    </div>
-                </nav>
-            </div>
-        </header>
-          <!-- Contact / Taken from Bootsrap documentation and modified -->
+
+<body>
+    <header>
+        <div id="page-container">
+            <div id="content-wrap">
+                <!-- Navbar / Taken from Bootsrap documentation and modified-->
+                <div class="container-fluid">
+                    <nav class="navbar navbar-expand-md bg-light-blue navbar-light fixed-top">
+                        <a class="navbar-brand" href="index.html">Villa Radic</a>
+                        <button class="navbar-toggler collapsed" type="button" data-toggle="collapse"
+                            data-target="#collapsibleNavbar" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="navbar-collapse collapse" id="collapsibleNavbar">
+                            <ul class="navbar-nav ml-auto">
+                                <li class="nav-item">
+                                    <a class="nav-link" href="index.html">Home</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="gallery.html">Gallery</a>
+                                </li>
+                                <li class="nav-item active">
+                                    <a class="nav-link" href="contact.html">Contact</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </nav>
+                </div>
+    </header>
+  
+    <!-- Contact / Taken from Bootsrap documentation and modified -->
     <section class="container-fluid container-contact">
         <div class="row">
             <div class="col">
@@ -47,23 +53,24 @@
                         <label class="form-label" for="fullname">Name</label>
                         <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
                         <label class="form-label" for="emailaddress">Email</label>
-                        <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required />
+                        <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email"
+                            required />
                         <label class="form-label" for="contact-reason">Description</label>
-                        <input id="contact-reason"  style="display:none">
-                        <textarea rows="6" name="message" id="projectsummary" class="form-control" placeholder="Message" required></textarea>
+                        <input id="contact-reason" style="display:none">
+                        <textarea rows="6" name="message" id="projectsummary" class="form-control" placeholder="Message"
+                            required></textarea>
                         <div class="form-row text-center">
                             <div class="col">
                                 <button type="submit" class="btn btn-secondary">Send Request</button>
                             </div>
                         </div>
                     </form>
-                    <br><br><br><br><br><br><br><br><br><br><br><br>
+                    <br><br><br><br><br><br>
                 </div>
-
             </div>
         </div>
     </section>
-        
+
     <footer>
         <footer class="container-fluid">
             <div id="footer-details" class="row justify-content-center no-gutters">
@@ -89,12 +96,20 @@
                             </a>
                         </li>
                     </ul>
-                     <p class="copyright general-sub">Copyright 2022 © Marko Jelavic</p>
+                    <p class="copyright general-sub">Copyright 2022 © Marko Jelavic</p>
                 </div>
             </div>
         </footer>
     </footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+        integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous">
+    </script>
 </body>
+
 </html>
