--- a/index.html
+++ b/index.html
@@ -1,99 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Villa Kotezi rental page"/>
-    <meta name="author" content="Marko Jelavic"/>
-    <meta name="keywords" content="Kotezi, Vrgorac, Radic, "/>
+    <meta name="description" content="Villa Kotezi rental page" />
+    <meta name="author" content="Marko Jelavic" />
+    <meta name="keywords" content="Kotezi, Vrgorac, Radic, " />
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" type="text/css" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        type="text/css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+        type="text/css" />
     <title>Villa Radic</title>
-    <body>
-        <header>
-            <div id="page-container">
-                <div id="content-wrap">
-            <!-- Navbar / Taken from Bootsrap documentation and modified-->
-            <div class="container-fluid">
-                <nav class="navbar navbar-expand-md bg-light-blue navbar-light fixed-top">
-                    <a class="navbar-brand" href="index.html">Villa Radic</a>
-                    <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="navbar-collapse collapse" id="collapsibleNavbar">
-                        <ul class="navbar-nav ml-auto">
-                            <li class="nav-item">
-                                <a class="nav-link active" href="index.html">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="gallery.html">Gallery</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="contact.html">Contact</a>
-                            </li>
-                        </ul>
-                    </div>
-                </nav>
+</head>
+
+<body>
+    <header>
+        <div id="page-container">
+            <div id="content-wrap">
+                <!-- Navbar / Taken from Bootsrap documentation and modified-->
+                <div class="container-fluid">
+                    <nav class="navbar navbar-expand-md bg-light-blue navbar-light fixed-top uppercase">
+                        <a class="navbar-brand" href="index.html">Villa Radic</a>
+                        <button class="navbar-toggler collapsed" type="button" data-toggle="collapse"
+                            data-target="#collapsibleNavbar" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="navbar-collapse collapse" id="collapsibleNavbar">
+                            <ul class="navbar-nav ml-auto">
+                                <li class="nav-item">
+                                    <a class="nav-link active" href="index.html">Home</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="gallery.html">Gallery</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="contact.html">Contact</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </nav>
+                </div>
             </div>
-        </header>
-       <!--hero image section-->    
+        </div>
+    </header>
+
+    <!--hero image section-->
     <section id="about">
         <div class="container-fluid">
             <div class="row your-new-class">
                 <div class="col-md-6 about-image left-image container">
-                    <img  src="assets/images/radic4.jpg" class="img-fluid" alt="Radic4">
-                    <div class="content">
+                    <img src="assets/images/radic4.jpg" class="img-fluid" alt="Radic4">
+                    <div class="content uppercase">
                         <h4>Villa Radic</h4>
                         <p>What a beautiful place</p>
-                      </div>
+                    </div>
                 </div>
                 <div class="col-md-6 about-image right-image container">
-                    <img  src="assets/images/radic2.jpg" class="img-fluid" alt="Radic2">
-                    <div class="content">
+                    <img src="assets/images/radic2.jpg" class="img-fluid" alt="Radic2">
+                    <div class="content uppercase">
                         <h4>Villa Radic</h4>
                         <p>An oasis of peace, quiet and untouched nature</p>
-                      </div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-        
-        <section>
-            Description
-        </section>
- 
-    <footer>
-        <footer class="container-fluid">
-            <div id="footer-details" class="row justify-content-center no-gutters">
-                <div class="col">
-                    <p class=" general-sub">Check out my social pages</p>
-                    <ul class="inline-block social-links">
-                        <li class="list-inline-item ml-3">
-                            <a target="_blank" href="https://www.facebook.com/">
-                                <i class="fa fa-facebook" aria-hidden="true"></i>
-                                <span class="sr-only">Facebook</span>
-                            </a>
-                        </li>
-                        <li class="list-inline-item ml-3">
-                            <a target="_blank" href="https://www.twitter.com/">
-                                <i class="fa fa-twitter" aria-hidden="true"></i>
-                                <span class="sr-only">Twitter</span>
-                            </a>
-                        </li>
-                        <li class="list-inline-item ml-3">
-                            <a target="_blank" href="https://www.instagram.com/">
-                                <i class="fa fa-instagram" aria-hidden="true"></i>
-                                <span class="sr-only">Instagram</span>
-                            </a>
-                        </li>
-                    </ul>
-                     <p class="copyright general-sub">Copyright 2022 © Marko Jelavic</p>
-                </div>
-            </div>
-        </footer>
-    </footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 
+    <section>
+        <h1>Description</h1>
+    </section>
+
+    <footer class="container-fluid">
+        <div id="footer-details" class="row justify-content-center no-gutters">
+            <div class="col">
+                <p class=" general-sub">Check out my social pages</p>
+                <ul class="inline-block social-links">
+                    <li class="list-inline-item ml-3">
+                        <a target="_blank" href="https://www.facebook.com/">
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                            <span class="sr-only">Facebook</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item ml-3">
+                        <a target="_blank" href="https://www.twitter.com/">
+                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                            <span class="sr-only">Twitter</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item ml-3">
+                        <a target="_blank" href="https://www.instagram.com/">
+                            <i class="fa fa-instagram" aria-hidden="true"></i>
+                            <span class="sr-only">Instagram</span>
+                        </a>
+                    </li>
+                </ul>
+                <p class="copyright general-sub">Copyright 2022 © Marko Jelavic</p>
+            </div>
+        </div>
+    </footer>
+     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 </body>
+
 </html>
