add about us section

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </header>
 
     <!--hero image section-->
-    <section id="about">
+    <section id="hero'image">
         <div class="container-fluid">
             <div class="row your-new-class">
                 <div class="col-md-6 about-image left-image container">
@@ -68,8 +68,22 @@
         </div>
     </section>
 
-    <section>
-        <h1>Description</h1>
+    <section id="about">
+            <h1>Holiday cottage</h1>
+            <div id="about-content" 
+                <p>
+                    Near the town of Vrgorac, surrounded by the nature of the Dalmatian hinterland, 
+                    is this pleasantly furnished holiday home with pool located. 
+                    The spacious property is surrounded by olive groves, vineyards, 
+                    orchard and a variety of herbs. There is a terrace with barbecue 
+                    where you can prepare delicious meals at your disposal. 
+                    Enjoy a walk along the marked hiking trails. Near the house is also
+                    a multifunctional playground located. Visit the town of Makarska
+                    and the beautiful beaches of Makarska Riviera. In neighboring 
+                    Bosnia and Herzegovina you can visit the famous shrine of Medjugorje. 
+                    In the garden is various eco vegetables available free of charge.
+                </p>
+            </div>
     </section>
 
     <footer class="container-fluid">
