Add UX to readme

--- a/index.html
+++ b/index.html
@@ -72,17 +72,20 @@
             <h1>Holiday cottage</h1>
             <div id="about-content" 
                 <p>
-                    Near the town of Vrgorac, surrounded by the nature of the Dalmatian hinterland, 
-                    is this pleasantly furnished holiday home with pool located. 
-                    The spacious property is surrounded by olive groves, vineyards, 
-                    orchard and a variety of herbs. There is a terrace with barbecue 
-                    where you can prepare delicious meals at your disposal. 
-                    Enjoy a walk along the marked hiking trails. Near the house is also
-                    a multifunctional playground located. Visit the town of Makarska
-                    and the beautiful beaches of Makarska Riviera. In neighboring 
-                    Bosnia and Herzegovina you can visit the famous shrine of Medjugorje. 
-                    In the garden is various eco vegetables available free of charge.
-                </p>
+                    Are you looking for a quiet and relaxing place
+                    to enjoy these warm summer days?
+                    If your answer is yes, we have an amazing offer for you. 
+                    Near the town called Vrgorac, surrounded by preserved nature of Dalmatia,
+                    there is a comfortably decorated holiday villa with a pool. 
+                    The plot of land around the house is spacious and filled with 
+                    fields of olives, herbs, vineyards, and orchards. 
+                    This ensures privacy for you and your loved ones to enjoy 
+                    the area and the beautiful view of the sea. 
+                    The fruits that grow in the garden are available for you to pick,
+                    free of charge. Within a 30-minute car distance, 
+                    you can visit Makarska, one of the most famous tourist towns in Croatia.                   
+                </p>                    
+
             </div>
     </section>
 
