--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
             <div id="content-wrap">
                 <!-- Navbar / Taken from Bootsrap documentation and modified-->
                 <div class="container-fluid">
-                    <nav class="navbar navbar-expand-md bg-light-blue navbar-light fixed-top">
+                    <nav class="navbar navbar-expand-md bg-light-blue navbar-light fixed-top uppercase">
                         <a class="navbar-brand" href="index.html">Villa Radic</a>
                         <button class="navbar-toggler collapsed" type="button" data-toggle="collapse"
                             data-target="#collapsibleNavbar" aria-label="Toggle navigation">
