Add testing to readme

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <section id="about">
             <h1>Holiday cottage</h1>
-            <div id="about-content" 
+            <div id="about-content">
                 <p>
                     Are you looking for a quiet and relaxing place
                     to enjoy these warm summer days?
