Add some description to about us section

--- a/index.html
+++ b/index.html
@@ -82,8 +82,10 @@
                     This ensures privacy for you and your loved ones to enjoy 
                     the area and the beautiful view of the sea. 
                     The fruits that grow in the garden are available for you to pick,
-                    free of charge. Within a 30-minute car distance, 
-                    you can visit Makarska, one of the most famous tourist towns in Croatia.                   
+                    free of charge. Vrgorac is connected by road with the nearby attractive 
+                    tourist destinations: Makarska (36 km), mouth of a river Neretva (25 km), 
+                    Metković (35 km), Roman Narona and Vid (25 km), 
+                    Međugorje (28 km), waterfall Kravice (23 km).
                 </p>                    
 
             </div>
