fix footer to the bottom

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Villa Kotezi rental page" />
     <meta name="author" content="Marko Jelavic" />
-    <meta name="keywords" content="Kotezi, Vrgorac, Radic, " />
+    <meta name="keywords" content="Kotezi, Vrgorac, Radic, Makarska, Croatia, Apartman, Cottage, Metkovic, Neretva" />
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         type="text/css" />
