Spell check readme

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     Are you looking for a quiet and relaxing place
                     to enjoy these warm summer days?
                     If your answer is yes, we have an amazing offer for you. 
-                    Near the town called Vrgorac, surrounded by preserved nature of Dalmatia,
+                    Near the town called Vrgorac, surrounded by the preserved nature of Dalmatia,
                     there is a comfortably decorated holiday villa with a pool. 
                     The plot of land around the house is spacious and filled with 
                     fields of olives, herbs, vineyards, and orchards. 
@@ -83,7 +83,7 @@
                     the area and the beautiful view of the sea. 
                     The fruits that grow in the garden are available for you to pick,
                     free of charge. Vrgorac is connected by road with the nearby attractive 
-                    tourist destinations: Makarska (36 km), mouth of a river Neretva (25 km), 
+                    tourist destinations: Makarska (36 km), the mouth of a river Neretva (25 km), 
                     Metković (35 km), Roman Narona and Vid (25 km), 
                     Međugorje (28 km), waterfall Kravice (23 km).
                 </p>                    
